<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/stock_id"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/addNoticeStock_stockId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorDisable"/>

                <ImageButton
                    android:id="@+id/addNoticeStock_clear"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:padding="5dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cancel" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/notice_price"/>

            <EditText
                android:id="@+id/addNoticeStock_priceFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:backgroundTint="@color/colorDisable"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ~ "/>

            <EditText
                android:id="@+id/addNoticeStock_priceTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:backgroundTint="@color/colorDisable"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <Button
                android:id="@+id/addNoticeStock_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@android:color/transparent"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/addNoticeStock_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@android:color/transparent"
                android:text="@string/complete"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>